# bix

./: Dockerfile  MANIFEST.in  README.md  compose.yaml  pyproject.toml  setup.cfg
bix/: __main__.py
bix/api/book/: __init__.py  delete.py  get.py  patch.py  post.py
bix/api/category/: __init__.py  delete.py  get.py  patch.py  post.py
bix/api/linkcategorybook/: __init__.py  delete.py  get.py  post.py
bix/api/linkreaderbook/: __init__.py  get.py  patch.py  post.py
bix/api/reader/: __init__.py  delete.py  get.py  patch.py  post.py
bix/common/: googleapi.py
bix/database/: __init__.py
bix/model/: __init__.py
bix/static/: browserconfig.xml  site.webmanifest
bix/static/css/: site.css
bix/static/js/: gridjs.umd.js  selection.umd.js
bix/templates/pages/: add_book.html  add_category.html  add_reader.html  book.html  books.html  categories.html  category.html  category_books.html  reader.html  reader_books.html  readers.html
bix/templates/parts/: navbar.html
bix/templates/shared/: base.html
