[metadata]
name             = bix
provides         = bix
description      = Take bookmarks.json, a URL list, or a single URL - convert those to screenshots
url              = https://github.com/ArchiMoebius/bix
download_url     = https://github.com/ArchiMoebius/bix
author           = Archi Moebius
author_email     = ArchiMoebius@dojobebo.com
maintainer       = Archi Moebius
maintainer_email = ArchiMoebius@dojobebo.com
keywords         = python3
license          = GPL-3 LGPL-3
platforms        = Linux
version          = attr: bix.__VERSION__
project_urls     =
    Docs = https://github.com/ArchiMoebius/bix/README.md
    Bugs = https://github.com/ArchiMoebius/bix/issues
    C.I. = https://github.com/ArchiMoebius/bix/

license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development

[options]
packages                = bix
zip_safe                = True
include_package_data    = True
python_requires         = >=3.8
tests_require           = isort
setup_requires          = pip
install_requires        =
    jinja2
    sqlmodel
    fastapi
    rich
    uvicorn
    requests

[options.entry_points]
console_scripts =
            bix = bix.__main__:cli

[options.packages.find]
where   = .
include =
    *.py
    *.css
    *.js
    *.html
    *.xml
    *.webmanifest
    *.png
    *.svg
    *.ico
exclude = *.pyc, *.tests, *.tests.*, tests.*, tests

[bdist_wheel]
universal = false

[sdist]
formats = zip, gztar
